--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^2.0.0",
     "react-rte": "^0.11.0",
+    "react-sound": "^0.5.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
