--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-core": "^6.5.2",
     "babel-polyfill": "^6.5.0",
     "babel-runtime": "^6.5.0",
+    "chart.js": "^2.5.0",
     "express": "^4.12.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -65,6 +66,7 @@
     "react-sound": "^0.5.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "superagent": "^3.5.2"
   }
 }
